--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,7 +1,7 @@
 .header{
 	width:100%;
 	display:block;
-	min-height:64px;
+	max-height:43px;
 	padding-top:0px;
 	background-color:$white-color;
 	background-size:cover;
@@ -19,8 +19,10 @@
 .title {
 	color:$black-color;
 	font-weight:bold;
-	font-size:24px;
+	font-size:18px;
 	text-align:center;
+	margin:0px;
+	padding:10px 0;
 }
 
 .view {
@@ -28,4 +30,21 @@
 	font-weight:lighter;
 	font-size:18px;
 	text-align:right;
+	display:block;
+	margin:4px 0;
+}
+
+.view a {
+	text-decoration:none;
+}
+
+.exit {
+	@extend .view;
+	text-align:left;
+	text-decoration:none;
+}
+
+.subnav p {
+	font-size:18px;
+	color:$blue-color;
 }
