--- a/scss/modules/_components.scss
+++ b/scss/modules/_components.scss
@@ -473,7 +473,7 @@ a:focus {outline:none !important;}
 .animated-arrow{
 	cursor:pointer;
 	padding:13px 35px 16px 0px;
-	margin:18px 0 0 18px;}
+	margin:7px 0 0 18px;}
 	
 .animated-arrow span, .animated-arrow span:before, .animated-arrow span:after {
 	cursor: pointer;
@@ -623,4 +623,88 @@ a:focus {outline:none !important;}
 	visibility:visible !important;
 	opacity:1  !important;
 	}
+
+/* Modal Windows */
+
+.modal-body {
+	padding:15px 30px;
+}
+
+.modal-bkgd {
+	background:#00060b url("../img/modal-header.jpg") no-repeat center center;
+
+	h1 {
+	color:$white-color;
+	text-align:center;
+	font-size:32px;
+	margin: 15px 0 0 0;	
+	}
+}
+
+.modal-dialog {
+	width:585px;
+}
+
+.close {
+  float: right;
+  font-size: 35px;
+  font-weight: lighter;
+  line-height: 1;
+  color: $white-color;
+  filter: alpha(opacity=20);
+  position: relative;
+  top: -55px;
+  opacity: 1;
+  text-shadow:none;
+}
+
+.close:hover, .close:focus {
+    color: $white-color;
+    text-decoration: none;
+    cursor: pointer;
+   }
+
+.modal-article {
+
+border-bottom:1px solid $grey-color;
+padding:20px 0;
+
+span {
+	color:$blue-color;
+	font-size:13px;
+}
+
+h2 {
+	font-size:32px;
+	color:$black-color;
+	margin:0 0 15px 0;
+	font-weight:lighter;
+}
+}
+
+.primer-articles {
+	padding:0 30px;
+}
+
+.primer-articles li {
+	list-style-type:decimal;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
