--- a/scss/modules/_sections.scss
+++ b/scss/modules/_sections.scss
@@ -90,9 +90,13 @@ hr {
   display:block;
   color:$white-color;
   margin-bottom: 30px;
-
   
 }
+
+.tile-hover a {
+  text-decoration:none;
+}
+
 
 .tile-content {
   padding:20px;
@@ -186,5 +190,68 @@ hr {
 }
 
 
+/*SCENARIOS*/
 
+.scenario {
+  padding:0;
+}
+
+.bar {
+  padding:0;
+  background:$white-color;
+  max-height:65px;
+}
+
+.box {
+  background-color:$black-color;
+  min-height:130px;
+  opacity:0.9;
+  width:100%;
+  position:absolute;
+  bottom:0px;
+
+  h4 {
+  color:$white-color;
+  padding:25px;
+  }
+
+}
+
+.article {
+  display:inline-block;
+  text-align:center;
+  width:auto;
+  padding:0 27px;
+
+  p {
+  font-size: 12px;
+  color:$black-color;
+  text-align:center;
+  padding:10px 0;
+  margin:0;
+  }
+}
+
+.progress {
+  height: 5px;
+  width:660px;
+  margin:0 auto;
+  float:none;
+}
+
+.progress-bar {
+  float:none;
+}
+
+.back {
+    float: left;
+    padding: 20px 50px;
+  
+}
+
+.continue {
+    float: right;
+    padding: 20px 50px;
+  
+}
 
