--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -9,6 +9,7 @@ $white-color:#ffffff;
 $grey-color:#cacccd;
 $black-color:#00060b;
 $dark-blue:#1b2631;
+$dark-gray:#50565b;
 
 //Bar Colors
 $green-color:#2dcc70;
