--- a/scss/modules/_sections.scss
+++ b/scss/modules/_sections.scss
@@ -196,19 +196,46 @@ hr {
   background:url(../img/assault-article.jpg); 
 }
 
-.green, .progress-complete {
+.green, .progress-complete >a>div {
   border-top:4px solid $green-color;
 }
 
-.red, .progress-new{
+.red, .progress-new >a>div{
   border-top:4px solid $red-color;
 }
 
 
-.yellow, .progress-underway {
+.yellow, .progress-underway  >a>div{
   border-top:4px solid $yellow-color;
 }
 
+
+/* SEARCH */
+
+.search-wrapper{
+  position: relative;
+
+  #search-box{
+
+  }
+  
+  .search-clear{
+    position: absolute;
+    display: block;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 32px;
+    /* height: 30px; */
+    background: $blue-color;
+    border-radius: 0 2px 2px 0;
+    color: white;
+    text-align: center;
+    line-height: 32px;
+    font-size: 30px;
+  }
+
+}
 
 /*SCENARIO TILES*/
 
