--- a/scss/modules/_sections.scss
+++ b/scss/modules/_sections.scss
@@ -239,6 +239,8 @@ hr {
 
 /*SCENARIO TILES*/
 
+
+
 .scenario-tile {
   background-repeat:no-repeat;
   min-height:232px;
@@ -302,6 +304,7 @@ background:url(../img/larceny-thumb4.jpg);
 
 .article {
 
+
   p {
   font-size: 12px;
   color:$black-color;
@@ -321,6 +324,14 @@ background:url(../img/larceny-thumb4.jpg);
 .progress-bar {
   float:none;
   transition: .3s ease-out width;
+}
+
+#articles-library{
+  padding-top:144px;
+}
+
+#article, #scenario{
+  padding-top:40px;
 }
 
 
