--- a/scss/layouts/_nav.scss
+++ b/scss/layouts/_nav.scss
@@ -15,14 +15,13 @@ nav{
 }
 
 .nav-pills {
-	border:1px solid $blue-color;
 	width:auto;
 	float:left;
 	position:absolute;
 
 
 	li {
-	border-right: 1px solid $blue-color;
+		border-right: 1px solid #d8d8d8;
 	}
 }
 
@@ -36,6 +35,7 @@ nav{
 .nav-pills > li > a {
 	border-radius:0px;
 	padding: 10px 28px;
+	background-color: #f1f1f1;
 }
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
 	border-radius:0px;
