--- a/scss/modules/_sections.scss
+++ b/scss/modules/_sections.scss
@@ -217,6 +217,18 @@ hr {
 }
 
 
+/*  read article modal */
+#primer{
+  span{
+    margin-top: 30px;
+  }
+  h3{
+    margin-top:0;
+    margin-bottom:30px;
+  }
+}
+
+
 /* SEARCH */
 
 .search-wrapper{
