--- a/css/main.css
+++ b/css/main.css
@@ -255,6 +255,12 @@ hr {
   margin-top: 0;
   margin-bottom: 30px; }
 
+#primer .indent.indent-1 {
+  margin-left: 30px; }
+
+#primer .indent.indent-2 {
+  margin-left: 60px; }
+
 /* SEARCH */
 .search-wrapper {
   position: relative; }
