--- a/scss/modules/_sections.scss
+++ b/scss/modules/_sections.scss
@@ -226,6 +226,14 @@ hr {
     margin-top:0;
     margin-bottom:30px;
   }
+  .indent{
+    &.indent-1{
+      margin-left: 30px;
+    }
+    &.indent-2{
+      margin-left: 60px;
+    }
+  }
 }
 
 
